--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
 				<br><br>
 					<div class="d-grid gap-2">
 				  		<a href="views/CadEmpresa.html" class="btn bg-login btn-lg">Cadastrar demandas </a>
-				  		<a href="views/principal.html" class="btn bg-login btn-lg">Status demandas cadastradas</a>
-						<a href="views/principal.html" class="btn bg-login btn-lg">Acesso Uniamerica</a>
+				  		<a href="projetotesteanderson.html" class="btn bg-login btn-lg">Status demandas cadastradas</a>
+						<a href="login.html" class="btn bg-login btn-lg">Acesso Uniamerica</a>
+						<a href="login-aluno.html" class="btn bg-login btn-lg">Acesso Estudante</a>
 					</div>
 			<div class="col-md-4"></div>
 		</div>
