--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
     <!-- Login Form -->
     <form>
-      <input type="text" id="e-mail class="fadeIn second" name="e-mail" placeholder="e-mail">
+      <input type="text" id="e-mail" class="fadeIn second" name="e-mail" placeholder="e-mail">
       <input type="text" id="senha" class="fadeIn third" name="e-mail" placeholder="senha">
       <a href="demandas.html" class="fadeIn fourth button-style">entrar</a>
     </form>
