--- a/projetotesteanderson.html
+++ b/projetotesteanderson.html
@@ -41,7 +41,7 @@
             <div class="card card-stepper text-black" style="border-radius: 16px;">
              
              
-              <a href="#" class="btnv" style="background-color: #24af24;  background-color: #24af24;
+              <a href="home.html" class="btnv" style="background-color: #24af24;  background-color: #24af24;
               border: none;
               color: white;
               padding: 15px 32px;
