--- a/home.html
+++ b/home.html
@@ -13,9 +13,10 @@
 		<div class="row col-md-12">
 			<div class="col-md-4"></div>
 			<div class="col-md-4 login">
-				<h1 class="text-center text-primary"><img src="logoUni.png" ></h1>
+				<h1 class="text-center text-primary"><img src="views/img/logoUni.png" ></h1>
 				<br><br>
 					<div class="d-grid gap-2">
+						
 				  		<a href="views/CadEmpresa.html" class="btn bg-login btn-lg">Cadastrar demandas </a>
 				  		<a href="views/principal.html" class="btn bg-login btn-lg">Status demandas cadastradas</a>
 						<a href="views/principal.html" class="btn bg-login btn-lg">Acesso Uniamerica</a>
