--- a/confirmacao.html
+++ b/confirmacao.html
@@ -45,8 +45,12 @@
     </div>
 
     <div class="opcoes">
-        <a href="sim.html" class="opcao" >Sim</a>
-        <a href="nao.html" class="opcao" >Não</a>
+        <form action="sim.html">
+            <button type="submit" class="opcao">Sim</button>
+        </form>
+        <form action="nao.html">
+            <button type="submit" class="opcao">Não</button>
+        </form>
     </div>
 </body>
 </html>
