--- a/dashboard-aluno.html
+++ b/dashboard-aluno.html
@@ -43,14 +43,14 @@
 </head>
 <body>
     <img src="logo.png" alt="Imagem de Cabeçalho" style="max-width: 20%; height: auto;">
-    <a href="demandas-aluno.html" class="retangulo">
-        <p>Demandas</p>
-    </a>
-    <a href="grupo.html" class="retangulo">
-        <p>Meu Grupo</p>
-    </a>
-    <a href="adicionar.html" class="retangulo">
-        <p>Criar Grupo</p>
-    </a>
+    <form action="demandas-aluno.html">
+        <button type="submit" class="retangulo">Demandas</button>
+    </form>
+    <form action="grupo.html">
+        <button type="submit" class="retangulo">Meu Grupo</button>
+    </form>
+    <form action="adicionar.html">
+        <button type="submit" class="retangulo">Adicionar membro </button>
+    </form>
 </body>
 </html>
