--- a/demandas-aluno.html
+++ b/demandas-aluno.html
@@ -70,7 +70,9 @@
     </style>
 </head>
 <body>
-    <a href="dashboard-aluno.html" class="voltar-button">Voltar</a>
+    <form action="dashboard-aluno.html">
+        <button type="submit" class="voltar-button">Voltar</button>
+    </form>
     <div class="header-text">Demandas Da Sua Área</div>
     <table>
         <thead>
@@ -88,14 +90,22 @@
                 <td>Data</td>
                 <td>Nome</td>
                 <td>Título do Projeto</td>
-                <td><a href="detalhes.html" class="detalhes-button">Detalhes</a></td>
+                <td>
+                    <form action="detalhes.html">
+                        <button type="submit" class="detalhes-button">Detalhes</button>
+                    </form>
+                </td>
             </tr>
             <tr>
                 <td>Nome Fantasia</td>
                 <td>Data</td>
                 <td>Nome</td>
                 <td>Título do Projeto</td>
-                <td><a href="detalhes.html" class="detalhes-button">Detalhes</a></td>
+                <td>
+                    <form action="detalhes.html">
+                        <button type="submit" class="detalhes-button">Detalhes</button>
+                    </form>
+                </td>
             </tr>
         </tbody>
     </table>
