--- a/grupo.html
+++ b/grupo.html
@@ -70,7 +70,9 @@
     </style>
 </head>
 <body>
-    <a href="dashboard-aluno.html" class="voltar-button">Voltar</a>
+    <form action="dashboard-aluno.html">
+        <button type="submit" class="voltar-button">Voltar</button>
+    </form>
     <div class="header-text">Seu Grupo</div>
     <table>
         <thead>
