--- a/nao.html
+++ b/nao.html
@@ -46,8 +46,8 @@
 <body>
     <img src="x.png" alt="Imagem" />
     <div class="texto-aprovado">OPERAÇÃO CANCELADA!</div>
-    <div class="opcoes">
-        <a href="dashboard-aluno.html" class="opcao" >ok!</a>
-    </div>
+    <form action="dashboard-aluno.html">
+        <button type="submit" class="opcao">Ok</button>
+    </form>
 </body>
 </html>
