--- a/sim.html
+++ b/sim.html
@@ -47,7 +47,9 @@
     <img src="check.png" alt="Imagem" />
     <div class="texto-aprovado">DEMANDA APROVADA!</div>
     <div class="opcoes">
-        <a href="dashboard-aluno.html" class="opcao" >ok!</a>
+        <form action="dashboard-aluno.html">
+            <button type="submit" class="opcao">Ok</button>
+        </form>
     </div>
 </body>
 </html>
