--- a/login-aluno.html
+++ b/login-aluno.html
@@ -31,7 +31,7 @@
         #senha {
             padding: 10px;
             font-size: 18px;
-            width: 16%;
+            width: 90%;
         }
         
         .retangulo {
@@ -49,10 +49,12 @@
             padding: 20px;
             position: relative;
             border: 2px solid rgb(168, 167, 167); /* Cor da borda */
+            justify-content: center; /* Centraliza verticalmente */
+            margin-left: 70px; /* Move o retângulo para a direita */
         }
 
         .retangulo p {
-            line-height: 0px; /* centralizar verticalmente o texto */
+            line-height: 0px; /* Centraliza verticalmente o texto */
         }
 
         .retangulo:hover {
@@ -62,10 +64,12 @@
 </head>
 <body>
     <h1>Login</h1>
-    <input type="number" id="numero" min="0" placeholder="Digite seu RA">
-    <input type="password" id="senha" placeholder="Digite sua senha">
-    <a href="dashboard-aluno.html" class="retangulo">
-        <p>Entrar</p>
-    </a>
+    <form action="dashboard-aluno.html" method="POST">
+        <input type="number" id="numero" name="ra" min="0" placeholder="Digite seu RA" required>
+        <br>
+        <input type="password" id="senha" name "senha" placeholder="Digite sua senha" required>
+        <br>
+        <button type="submit" class="retangulo">Login</button>
+    </form>
 </body>
 </html>
