--- a/confirmacao.html
+++ b/confirmacao.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="confirmacao-text">
-        VOCÊ TEM CERTEZA QUE DESEJA SE AFILIAR A ESSA DEMANDA?
+        VOCÊ TEM CERTEZA?
     </div>
 
     <div class="opcoes">
