--- a/dashboard-aluno.html
+++ b/dashboard-aluno.html
@@ -52,5 +52,8 @@
     <form action="adicionar.html">
         <button type="submit" class="retangulo">Adicionar membro </button>
     </form>
+    <form action="convite.html">
+        <button type="submit" class="retangulo">Convite para grupo </button>
+    </form>
 </body>
 </html>
