--- a/demandas-aluno.html
+++ b/demandas-aluno.html
@@ -86,10 +86,10 @@
         </thead>
         <tbody>
             <tr>
-                <td>Nome Fantasia</td>
-                <td>Data</td>
-                <td>Nome</td>
-                <td>Título do Projeto</td>
+                <td>Uniamerica</td>
+                <td>15/08/2023</td>
+                <td>Baltazard</td>
+                <td>Projetos Integradores</td>
                 <td>
                     <form action="detalhes.html">
                         <button type="submit" class="detalhes-button">Detalhes</button>
@@ -97,10 +97,10 @@
                 </td>
             </tr>
             <tr>
-                <td>Nome Fantasia</td>
-                <td>Data</td>
-                <td>Nome</td>
-                <td>Título do Projeto</td>
+                <td>Dell</td>
+                <td>20/04/2023</td>
+                <td>Rodrigo</td>
+                <td>Sistema de Cadastros</td>
                 <td>
                     <form action="detalhes.html">
                         <button type="submit" class="detalhes-button">Detalhes</button>
