--- a/grupo.html
+++ b/grupo.html
@@ -67,6 +67,19 @@
         .voltar-button:hover {
             background-color: rgb(17, 242, 17);
         }
+        .quero-button {
+            position: absolute;
+            top: 470px; /* Distância do topo */
+            left: 620px; /* Posicionado à direita da tela */
+            background-color: #000000;
+            color: white;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        .quero-button:hover {
+            background-color: rgb(17, 242, 17);
+        }
     </style>
 </head>
 <body>
@@ -82,12 +95,21 @@
         </thead>
         <tbody>
             <tr>
-                <td>Nome</td>
+                <td>Jorge - Representante</td>
             </tr>
             <tr>
-                <td>Nome</td>
+                <td>Alberto</td>
+            </tr>
+            <tr>
+                <td>Douglas</td>
+            </tr>
+            <tr>
+                <td>Rodrigo</td>
             </tr>
         </tbody>
     </table>
+    <form action="demanda-grupo.html">
+        <button type="submit" class="quero-button">Demanda do grupo</button>
+    </form>
 </body>
 </html>
