--- a/sim.html
+++ b/sim.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <img src="check.png" alt="Imagem" />
-    <div class="texto-aprovado">DEMANDA APROVADA!</div>
+<div class="texto-aprovado">OPERAÇÃO APROVADA!</div>
     <div class="opcoes">
         <form action="dashboard-aluno.html">
             <button type="submit" class="opcao">Ok</button>
