--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
 				<br><br>
 					<div class="d-grid gap-2">
 				  		<button type="button" onclick="location.href='views/CadEmpresa.html'" class="btn bg-login btn-lg">Cadastrar demandas </button>
-				  		<button type="button" onclick="location.href='projetotesteanderson.html'" class="btn bg-login btn-lg">Status demandas cadastradas</button>
-						<button type="button" onclick="location.href='login.html'" class="btn bg-login btn-lg">Acesso Uniamerica</button>
+				  		<button type="button" onclick="location.href='views/projetotesteanderson.html'" class="btn bg-login btn-lg">Status demandas cadastradas</button>
+						<button type="button" onclick="location.href='views/login.html'" class="btn bg-login btn-lg">Acesso Uniamerica</button>
 						<button type="button" onclick="location.href='login-aluno.html'" class="btn bg-login btn-lg">Acesso Estudante</button>
 					</div>
 			<div class="col-md-4"></div>
