--- a/login-aluno.html
+++ b/login-aluno.html
@@ -67,7 +67,7 @@
     <form action="dashboard-aluno.html" method="POST">
         <input type="number" id="numero" name="ra" min="0" placeholder="Digite seu RA" required>
         <br>
-        <input type="password" id="senha" name "senha" placeholder="Digite sua senha" required>
+        <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
         <br>
         <button type="submit" class="retangulo">Login</button>
     </form>
