--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CadDemanda</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="views/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="views/css/estilo.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MQ93P84a8pA3E8i6Zo8S2L/DqIgdsxgSn7veuU2K5u1bR8xfgc9bN1h5ZafRVd8" crossorigin="anonymous">
 
 	<!-- verifica numero celular e valido -->
@@ -225,7 +225,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-grey">
 			<div class="container-fluid">
 			  <a class="navbar-brand" href="Home.html">
-				<img src="img/logoDescohorizontal.png" style="padding-left: 20%;" width="310" height="45" alt="Logo">
+				<img src="views/img/logoDescohorizontal.png" style="padding-left: 20%;" width="310" height="45" alt="Logo">
 			  </a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 		  </nav>
 	</section>
 	
-	<section class="body" style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 1), rgba(25, 26, 26, 2), rgb(25, 26, 26)),url(img/image.jpeg) ">
+	<section class="body" style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 1), rgba(25, 26, 26, 2), rgb(25, 26, 26)),url(views/img/image.jpeg) ">
 		<div class="row col-md-12" >
 			<div class="col-md-4 " ></div>
 			<div class="col-md-4 " >
@@ -266,7 +266,7 @@
 					<h6 class="fonte" style="align-content: center;">Para saber mais sobre o programa de captação de demandas</h6>
 					<br>
 					<div class="d-grid gap-2 col-6 mx-auto">
-						<a class="btn btn-outline btn-submit fonte-button" href="docs/edital-para-captacao-de-demandas-2023-1.pdf">Acesse o edital</a>
+						<a class="btn btn-outline btn-submit fonte-button" href="views/docs/edital-para-captacao-de-demandas-2023-1.pdf">Acesse o edital</a>
 						<br><br><br><br><br><br><br>
 					</div>
 
@@ -487,7 +487,7 @@
 					</div>				
 					<br><br>	  
 					<div class="d-grid gap-2 col-6 mx-auto">
-						<button type="submit" class="btn btn-outline enviar" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+						<button type="submit" class="btn btn-submit " >
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
 								<path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
 							</svg>
@@ -499,27 +499,10 @@
 				  										  
 			</div>
 		</div>
-		<!--Modal-->
-		<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-					<h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-					...
-					</div>
-					<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Understood</button>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 <!-- chamada do JS -->
 <script type="text/javascript" src="views/js/bootrstrap.js"></script>
-<script type="text/javascript" src="js/CadDemanda.js"></script>
+<script type="text/javascript" src="views/js/CadDemanda.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Q6q4kZY2Dl2rNwHAeU4sXz4y3el3z9gEj7B4q6YfTN3z6rMzU3ltN2Ugp4R5L9x" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8+0pU7M5CB8t/uUtkF76+V4Bnv3F+bIdHWVAvW49M6b77Emm" crossorigin="anonymous"></script>
 
