--- a/adicionar.html
+++ b/adicionar.html
@@ -29,7 +29,7 @@
         }
         .retangulo {
             width: 100px;
-            height: 25px;
+            height: 10px;
             background-color: rgb(220, 218, 218); /* Cor interna dos retângulos */
             margin: 20px auto; /* Centralizar horizontalmente o botão */
             transition: background-color 0.3s ease;
@@ -65,16 +65,35 @@
         .voltar-button:hover {
             background-color: rgb(17, 242, 17);
         }
+        #logo {
+            width: 200px;
+        }
+        #container {
+            background-color: rgb(255, 252, 252); /* Fundo branco semi-transparente */
+            padding: 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        
+        h3 {
+            color: rgb(96, 94, 94); /* Cor da escrita "Login Aluno" */
+        }
     </style>
 </head>
 <body>
-    <form action="dashboard-aluno.html">
-        <button type="submit" class="voltar-button">Voltar</button>
-    </form>
-    <h1>Insira o RA do seu colega</h1>
-    <form action="grupo.html">
-        <input type="number" id="numero" name="ra" min="0" placeholder="Digite o RA" required>
-        <button type="submit" class="retangulo">Adicionar</button>
-    </form>
+    <div id="header">
+        <img src="logo.png" alt="Logo" id="logo"> 
+    </div>
+    <div id="container">
+        <form action="grupo.html" method="POST">
+            <h3>Convide seu Colega para o grupo</h3>
+            <input type="number" id="numero" name="ra" min="0" placeholder="Digite o RA" required>
+            <br>
+            <button type="submit" class="retangulo">Convidar</button>
+        </form>
+    </div>
 </body>
 </html>
