--- a/home.html
+++ b/home.html
@@ -250,7 +250,9 @@
 		  </nav>
 	</section>
 	
-	<section class="body" style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 1), rgba(25, 26, 26, 2), rgb(25, 26, 26)),url(views/img/image.jpeg) ">
+	<div class="background-body">
+
+	<section class="body" style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 0.80), rgba(25, 26, 26, 2)),url(views/img/vuca.jpg.jpeg); background-size: 1690px; ">
 		<div class="row col-md-12" >
 			<div class="col-md-4 " ></div>
 			<div class="col-md-4 " >
@@ -499,7 +501,8 @@
 				  										  
 			</div>
 		</div>
-		
+	</section>
+</div>
 <!-- chamada do JS -->
 <script type="text/javascript" src="views/js/bootrstrap.js"></script>
 <script type="text/javascript" src="views/js/CadDemanda.js"></script>
