--- a/home.html
+++ b/home.html
@@ -350,8 +350,8 @@
 							<option value="espanha">Espanha</option>
 							<option value="portugal">Portugal</option>
 							<option value="argentina">Argentina</option>
-							<option value="mexico">México</option>
-							<option value="australia">Austrália</option>
+							<option value="mexico">Paraguai</option>
+							<option value="australia">México</option>
 							<option value="australia">Outro</option>
 							<!-- Adicione mais países aqui, se desejar -->
 						 </select>
