--- a/login.html
+++ b/login.html
@@ -14,30 +14,35 @@
 <!------ Include the above in your HEAD tag ---------->
 </head>
 <body>
+  
 
   <img src="uniamerica-descomplica.png" alt="Descrição da imagem" class="imagem-estilizada">
-
-    
+ 
 
 <div class="wrapper fadeInDown">
+ 
+  
+  
   <div id="formContent">
     <!-- Tabs Titles -->
 
     <!-- Icon -->
     <div class="fadeIn first">
+      <p>login</p>
       <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="" />
     </div>
 
     <!-- Login Form -->
     <form>
-      <input type="text" id="e-mail" class="fadeIn second" name="e-mail" placeholder="e-mail">
+      <input type="text" id="e-mail class="fadeIn second" name="e-mail" placeholder="e-mail">
       <input type="text" id="senha" class="fadeIn third" name="e-mail" placeholder="senha">
       <a href="demandas.html" class="fadeIn fourth button-style">entrar</a>
+      <a href="" class="btnesqueceu">esqueceu senha?</a>
     </form>
-
+    <div><br></div>
     <!-- Remind Passowrd -->
     <div id="formFooter">
-    
+      <a class="underlineHover" href="#">cadastrar</a>
     </div>
 
   </div>
