--- a/statusdedemanda.html
+++ b/statusdedemanda.html
@@ -27,13 +27,13 @@
             <div class="demand">
                 <h3>Demanda 1</h3>
                 <p>Descrição completa da demanda...</p>
-                <a class="details-btn" href="projetotesteanderson.html">Detalhes</a>
+                <a class="details-btn" href="">Detalhes</a>
             </div>
 
             <div class="demand">
                 <h3>Demanda 2</h3>
                 <p>Descrição completa da demanda...</p>
-                <a class="details-btn" href="projetotesteanderson.html">Detalhes</a>
+                <a class="details-btn" href="">Detalhes</a>
             </div>
            
             <!-- Adicione outras demandas conforme necessário -->
