--- a/projetotesteanderson.html
+++ b/projetotesteanderson.html
@@ -68,12 +68,9 @@
                   </div>
                 </div>
     
-                <ul id="progressbar-2" class="d-flex justify-content-between mx-0 mt-0 mb-5 px-0 pt-0 pb-2">
-                  <li class="step0 active text-center" id="step1"></li>
-                  <li class="step0 active text-center" id="step2"></li>
-                  <li class="step0 active text-center" id="step3"></li>
-                  <li class="step0 text-muted text-end" id="step4"></li>
-                </ul>
+                <div class="progress">
+                  <div  class="progress-bar progress-bar-striped progress-bar-animated"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:  30%; background-color: #00d848;"></div>
+                </div>
     
                 <div class="d-flex justify-content-between">
                   <div class="d-lg-flex align-items-center">
